2004-05-07  Bastien Nocera  <hadess@hadess.net>

	* src/sj-util.c: (mkdir_recursive): better error message when ripping
	on a full disk (Closes: #140403)

2004-05-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.5.12.

2004-04-30  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add " to the list of characters to strip for sane paths.
	Fix a crash when the user skips writing every track if they already exist.

2004-04-16  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Wire up the Help button. Thanks to Brent Fox for the patch.

2004-04-16  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Handle the new GStreamer 0.8 error callback prototype.

2004-04-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Don't bother building with GStreamer 0.7.x, and set a define
	stating which version of GStreamer we are using.

2004-04-14  Bastien Nocera  <hadess@hadess.net>

	* autogen.sh: make it build with automake 1.8
	* src/cd-drive.c: (linux_bsd_media_type): update from libbacon

2004-04-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Release 0.5.11.

2004-04-13  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer-manual-C.omf:
	Add the DTD.

2004-04-13  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.c:
	* src/bacon-cd-selection.h:
	* src/cd-drive.c:
	* src/dvd_plus_rw_utils.cpp:
	Updated.

2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Look for GStreamer 0.8 before trying 0.7 and 0.6.

2004-03-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add a mnemonic to the "broken encoder" dialog, and fix the closing
	logic.
	
2004-03-29  Ross Burton  <ross@burtonini.com>

	* README:
	Updated, and added a FAQ.

2004-03-23  Maxim Dziumanenko <mvd@mylinux.com.ua>

	* configure.in:  Added "uk" (Ukrainian) to ALL_LINGUAS
