@@ -25,5 +25,6 @@
 
 extern const char* prefs_get_default_device ();
 void on_edit_preferences_cb (GtkMenuItem *item, gpointer user_data);
+gboolean cd_drive_exists (const char *device);
 
 #endif /* SJ_PREFS_H */
